fixed transparent navbar for mobile by setting a super high z-index for navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
 
 
 .navbar {
+  z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
